<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            android:autofillHints="@string/rohit"
            />
        <TextView
            style="@style/headings"
            android:text="@string/Topping"
            />
        <CheckBox
            android:id="@+id/whippedCreamId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WhippedCream"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            />
        <CheckBox
            android:id="@+id/chocolateId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Chocolate"
            android:textSize="16sp"
            android:paddingStart="24dp"
            android:layout_marginBottom="16dp"
            android:paddingEnd="24dp"
            />
        <TextView
            style="@style/headings"
            android:text="@string/Quantity"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_sign"
                android:textSize="30sp"
                android:onClick="increment"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quantity_text_view"
                android:textColor="@color/black"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/one"
                android:textSize="32sp"
                android:fontFamily="sans-serif-light"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_sign"
                android:textSize="30sp"
                android:onClick="decrement"
                />
        </LinearLayout>
        <TextView
            style="@style/headings"
            android:layout_marginBottom="16dp"
            android:text="@string/Order_Summary"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price_text_view"
            android:textColor="@color/black"
            android:text="@string/TotalPrice"
            android:textSize="24sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Order"
            android:onClick="submitOrder"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_order_summary"
            android:onClick="secondActivity"
            android:textAllCaps="false"
            />
    </LinearLayout>
</ScrollView>